# EDA-Data-Accuracy-Test-Rule-Engine

./: .eda-rules.yaml  .gitignore  Ideation_Proposal .docx  Ideation_Proposal .md  README.md  ideationProposal.md  pyproject.toml  requirements.txt  sample_data.sql
docs/: CLI_DEMO.md
examples/: sample_rules.yaml
src/eda_rule_engine/: __init__.py
src/eda_rule_engine/cli/: main.py
src/eda_rule_engine/core/: engine.py  reporter.py
src/eda_rule_engine/database/: manager.py
src/eda_rule_engine/parsers/: sql_generator.py
src/eda_rule_engine/rules/: __init__.py  manager.py
src/eda_rule_engine/utils/: config.py
